correctet z-index fofor tooltip:hover

--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -5,129 +5,132 @@
 }
 
 .section {
-    &__box {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: start;
-      margin: 25px 0 25px 80px;
-    }
+  &__box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    margin: 25px 0 25px 80px;
+  }
 
-    &__title {
-      font-weight: 700;
-      font-size: 28px;
-      padding: 15px 0 15px 25px;
-      color: var(--main-font-primary);
-    }
-    &__list {
-      list-style: none;
-      width: 500px;
-    }
+  &__title {
+    font-weight: 700;
+    font-size: 28px;
+    padding: 15px 0 15px 25px;
+    color: var(--main-font-primary);
+  }
+  &__list {
+    list-style: none;
+    width: 500px;
+  }
 
-    &__projects-list {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      list-style: none;
+  &__projects-list {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    list-style: none;
+  }
+  &__project-sort {
+    display: flex;
+    gap: 15px;
+  }
+  &__projects-list li {
+    width: 80px;
+    height: 40px;
+    background-color: var(--button-background-color);
+    border-radius: 10px;
+    border-bottom: 5px solid var(--button-border-color);
+    border-right: 3px solid var(--button-border-color);
+    cursor: pointer;
+    color: var(--button-font-primary);
+    transition: 0.25s ease-in-out;
+
+    &:hover {
+      transform: scale(1.02);
+      color: var(--button-font-secondary);
     }
-    &__project-sort {
-      display: flex;
-      gap: 15px;
-    }
-    &__projects-list li {
-      width: 80px;
+    &:active {
+      border-bottom: 1px solid var(--button-border-color);
+      border-right: 1px solid var(--button-border-color);
+      transform: translate(3px, 3px);
+      width: 82px;
       height: 40px;
-      background-color: var(--button-background-color);
-      border-radius: 10px;
-      border-bottom: 5px solid var(--button-border-color);
-      border-right: 3px solid var(--button-border-color);
-      cursor: pointer;
-      color: var(--button-font-primary);
-      transition: 0.25s ease-in-out;
-
-      &:hover {
-        transform: scale(1.02);
-        color: var(--button-font-secondary);
-      }
-      &:active {
-        border-bottom: 1px solid var(--button-border-color);
-        border-right: 1px solid var(--button-border-color);
-        transform: translate(3px, 3px);
-        width: 82px;
-        height: 40px;
-        color: var(--button-font-tertiary);
-      }
+      color: var(--button-font-tertiary);
     }
-    &__projects-list--text {
-      text-align: center;
-      font-weight: 700;
-      text-transform: uppercase;
-      padding-top: 10px;
-      letter-spacing: 1.3px;
-    }
-    &__list li {
-      list-style: inside;
-      padding: 0px 0 10px 10px;
-      font-weight: 500;
-      font-size: 18px;
-      letter-spacing: 1.3px;
-    }
- 
-    &__description {
-      font-weight: 500;
-      padding: 10px 0 10px 0;
-    }
+  }
+  &__projects-list--text {
+    text-align: center;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding-top: 10px;
+    letter-spacing: 1.3px;
+  }
+  &__list li {
+    list-style: inside;
+    padding: 0px 0 10px 10px;
+    font-weight: 500;
+    font-size: 18px;
+    letter-spacing: 1.3px;
+  }
 
-    &__sub-title {
-      font-weight: 700px;
-      font-size: 22px;
-    }
-    &__title-color {
-      color: var(--main-font-tertiary);
-    }
+  &__description {
+    font-weight: 500;
+    padding: 10px 0 10px 0;
+  }
 
-    &__date {
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 15px;
-      color: var(--main-font-quaternary);
-      padding: 5px 5px 10px 0;
-    }
-  } 
+  &__sub-title {
+    font-weight: 700px;
+    font-size: 22px;
+  }
+  &__title-color {
+    color: var(--main-font-tertiary);
+  }
 
-   //Opis pod button repozytoria
+  &__date {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 15px;
+    color: var(--main-font-quaternary);
+    padding: 5px 5px 10px 0;
+  }
+}
 
-       .custom-tooltip {
-        position: relative;
-        display: inline-block;
-      }
+//Opis pod button repozytoria
 
-      .custom-tooltip:hover .tooltip-content {
-        display: block;
-      }
+.custom-tooltip {
+  position: relative;
+  display: inline-block;
+}
 
-      .tooltip-content {
-        display: none;
-        position: absolute;
-        top: 120%;
-        left: 20px;
-        background-color: rgba(22, 22, 22, 0.5);
-        padding: 10px;
-        border: 1px solid #302f2f;
-        border-radius: 0px 30px 0px 30px;
-        z-index: 1;
-        transform: scale(1);
-        transform-origin: left top;
+.custom-tooltip:hover .tooltip-content {
+  display: block;
+}
+.custom-tooltip:hover {
+  z-index: 1;
+}
+.tooltip-content {
+  display: none;
+  position: absolute;
+  top: 120%;
+  left: 20px;
+  background-color: rgba(22, 22, 22, 0.5);
+  padding: 10px;
+  border: 1px solid #302f2f;
+  border-radius: 0px 30px 0px 30px;
+  z-index: 0;
+  letter-spacing: 1.5;
+  transform: scale(1);
+  transform-origin: left top;
 
-        animation: showDesc 1s ease;
-      }
+  animation: showDesc 1s ease;
+}
 
-      @keyframes showDesc {
-        0% {
-          opacity: 0;
-          transform: scale(0);
-        }
-        1% {
-          opacity: 1;
-        }
-      } 
+@keyframes showDesc {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  1% {
+    opacity: 1;
+  }
+}
